# Specify the build backend for PEP 517 builds
[build-system]
build-backend = "setuptools.build_meta"
requires = ["requests", "setuptools>=61"]

# Project metadata and configuration
[project]
authors = [
  {name = "ThreatConnect", email = "support@threatconnect.com"},
]

# Classifiers for the project
classifiers = [
  "Development Status :: 5 - Production/Stable", # Project development status
  "Intended Audience :: Developers", # Intended audience for the project
  "Natural Language :: English", # Language used in the project
  "Operating System :: OS Independent", # Supported operating systems
  "Programming Language :: Python", # Supported programming languages
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security", # Project topic
]

# List of runtime dependencies
dependencies = [
  "arrow>=1.3.0",
  "black>=25.1.0",
  "inflection>=0.5.1",
  "isort>=6.0.0",
  "jmespath>=1.0.1",
  "paho-mqtt<3.0.0",
  "pyaes>=1.6.1",
  "pydantic-core>=2.10.0,<3.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "redis<5.0.0",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "semantic-version>=2.10.0",
  "wrapt>=1.17.2",
]

# Short description of the project
description = "ThreatConnect Exchange App Framework"

# List of dynamic fields to be provided at build time
dynamic = ["readme", "version"]

# List of keywords for the project
keywords = ["exchange", "tcex", "threatconnect"]

# License information
license = "Apache-2.0"
license-files = ["LICENSE"]

# Name of the project
name = "tcex"

# Minimum required Python version
requires-python = ">=3.11"

# URLs related to the project
[project.urls]
Documentation = "https://threatconnect.readme.io/docs/overview"
"Release Notes" = "https://threatconnect.readme.io/docs/release-notes"
Source = "https://github.com/ThreatConnect-Inc/tcex"

# Dependency groups for development and testing
[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "pre-commit>=4.1.0",
  "pyright>=1.1.394",
  "pyupgrade>=3.19.1",
  "ruff>=0.9.7",
  "typer>=0.15.1",
]
test = [
  "deepdiff>=8.2.0",
  "python-dotenv>=1.2.1",
  "fakeredis>=2.27.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "pytest-ordering>=0.6",
  "pytest-xdist>=3.6.1",
  "python-dotenv>=1.2.1",
]

# Dynamic configuration for setuptools
[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "tcex.__version__"}

# Package discovery options for setuptools
[tool.setuptools.packages.find]
exclude = ["tests*", "local-*"]

#
# Tool configurations
#

[tool.uv.extra-build-dependencies]
tcex = [
  "arrow>=1.3.0",
  "black>=25.1.0",
  "inflection>=0.5.1",
  "jmespath>=1.0.1",
  "paho-mqtt<2.0.0",
  "pyaes>=1.6.1",
  "pydantic>2.0.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "redis<5.0.0",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "semantic-version>=2.10.0",
  "wrapt>=1.17.2",
]

# Configuration for bumpversion tool
[tool.bumpversion]
# Allow version bumping even if there are uncommitted changes
allow_dirty = true
# Controls whether to create a git commit after bumping the version
commit = false
# Additional arguments to pass to the git commit command
commit_args = "--no-verify"
# The current version of the project
current_version = "5.0.0-dev0"
# The commit message template used when committing version bumps
message = "Version updated from {current_version} to {new_version}"
# Regular expression for parsing version strings
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
# List of commands to run as pre-commit hooks before bumping the version
pre_commit_hooks = ["uv sync --upgrade", "git add uv.lock"]
# Whether to use regular expressions for version parsing
regex = false
# List of version string formats to use when serializing the new version
serialize = [
  "{major}.{minor}.{patch}-{pre_l}{pre_n}",
  "{major}.{minor}.{patch}",
]
# Controls whether to create a git tag after bumping the version
tag = false

# Configuration for pre-release label part in versioning
[tool.bumpversion.parts.pre_l]
optional_value = "final"
values = ["dev", "rc", "final"]

# List of files to update when bumping the version
[[tool.bumpversion.files]]
filename = "tcex/__metadata__.py"

# Configuration for codespell spell checker
[tool.codespell]
# https://streetsidesoftware.com/vscode-spell-checker/
ignore-words-list = "ore"
skip = "*.cspell*,*.history,*local,uv.lock"

# Configuration for pyright type checker
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
exclude = [
  "**/.history",
  "**/__pycache__",
  "**/local-*",
  "tcex/api/tc/v2",
  "tests",
]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportPrivateImportUsage = false

# Configuration for pytest test runner
[tool.pytest.ini_options]
filterwarnings = []
junit_family = "xunit2"
testpaths = [
  "tests",
]
# Enable multiprocessing support for pytest
# addopts = "--numprocesses=auto --dist=loadgroup"

# Configuration for ruff linter and formatter
[tool.ruff]
# https://docs.astral.sh/ruff/
# exclude additional directories, outside of .gitignore.
exclude = [
  "tests",
]
# set line length to match black
line-length = 100
# set the python target
target-version = "py311"

# Configuration for ruff formatter
[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
docstring-code-format = true
docstring-code-line-length = 60
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

# Configuration for ruff linter rules
[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
# control "--fix" behavior.
# fixable = []
# unfixable = []
# https://beta.ruff.rs/docs/configuration/#error-suppression
ignore = [
  "B008", # Do not perform function call ... in argument defaults; instead, perform ...
  "B011", # do not call assert False since python -O removes these calls
  "BLE001", # Do not catch blind exception: ...
  "C901", # ... is too complex
  "D202", # no blank lines allowed after function docstring
  "D203", # 1 blank line required before class docstring (found 0)
  "D213", # Multi-line docstring summary should start at the second line
  "D400", # First line should end with a period ...
  "D406", # Section name should end with a newline ...
  "D407", # Missing dashed underline after section ...
  "D413", # Missing blank line after last section ...
  "D415", # First line should end with a period, question mark, or exclamation point ...
  "E402", # module level import not at top of file
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument in function definition
  "G004", # Logging statement uses f-string
  "N818", # Exception name ... should be named with an Error suffix
  "PGH003", # Use specific rule codes when ignoring type issues
  "PGH004", # Use specific rule codes when using `ruff: noqa`
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PT006", # Wrong name(s) type in ..., expected ...
  "TC001", # Move application import ... into a type-checking block
  "TC003", # Move standard library import ... into a type-checking block
  "TC006", # Checks for unquoted type expressions in typing.cast() calls.
  "TID252", # Prefer absolute imports over relative imports from parent modules
]
# control enabled plugins
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C", # flake8-comprehensions
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "E", # pycodestyle
  "W", # pycodestyle
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "F", # Pyflakes
  "FBT", # flake8-boolean-trap
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "NPY", # NumPy-specific
  "PD", # pandas-vet
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL", # Pylint
  "PLC", # Convention
  "PLE", # Error
  "PLR", # Refactor
  "PLW", # Warning
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # flake8-2020
]
# Other Options
# "ANN", # flake8-annotations
# "COM", # flake8-commas
# "ERA", # eradicate
# "S", # flake8-bandit
# "Q", # flake8-quotes

# Per-file ignores for ruff linter
[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Define a default section for any imports that don't fit into the specified section-order.
default-section = "first-party"

# A list of modules to consider standard-library, in addition to those known to Ruff in advance
extra-standard-library = []

# Map known_first_party to known-first-party
known-first-party = ["tcex"]

# Map known_local_folder to known-local-folder
known-local-folder = ["."]

# Map known_third_party to known-third-party
known-third-party = [
  "arrow",
  "cryptography",
  "dotenv",
  "pydantic",
  "pydantic_core",
  "pydantic_settings",
  "pytest",
  "redis",
  "requests",
  "semantic_version",
]

# Override in which order the sections should be output. Can be used to move custom sections.
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Equivalent to include_trailing_comma = true
split-on-trailing-comma = true

# Pydocstyle configuration for ruff linter
[tool.ruff.lint.pydocstyle]
# https://docs.astral.sh/ruff/linter/

convention = "google"

# [tool.cibuildwheel]
# # You can also put cibuildwheel config here instead of env vars
# build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
# skip = "*-win32 *-manylinux_i686 *-musllinux_i686 pp*"
#
# [tool.cibuildwheel.linux]
# before-build = "pip install -U pip setuptools wheel"
# repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
#
# [tool.cibuildwheel.macos]
# before-build = "pip install -U pip setuptools wheel"
# repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
#
# [tool.cibuildwheel.windows]
# before-build = "pip install -U pip setuptools wheel"
